# YimMenuV2

./: CMakeLists.txt
.github/workflows/: build.yml  ci.yml
src/core/commands/: HotkeySystem.cpp
src/core/frontend/manager/: UIManager.cpp
src/core/frontend/manager/styles/Classic/: Classic.cpp
src/core/frontend/manager/styles/Modern/: Modern.cpp
src/core/frontend/manager/styles/ModernVertical/: ModernVertical.cpp
src/core/hooking/: Hooking.cpp
src/game/backend/: AnticheatBypass.cpp  PersonalVehicles.cpp  PersonalVehicles.hpp  SavedVehicles.cpp
src/game/features/recovery/: Casino.cpp
src/game/features/recovery/Heist/: CayoPericoHeist.cpp
src/game/frontend/: GUI.cpp
src/game/frontend/submenus/: Settings.cpp
src/game/frontend/submenus/Debug/: Misc.cpp
src/game/frontend/submenus/Player/: Info.cpp
src/game/frontend/submenus/Recovery/Heist/: DiamondCasinoHeist.cpp
src/game/frontend/submenus/Vehicle/: SavedVehicles.cpp
src/game/gta/: Scripts.cpp
src/game/gta/data/: LauncherScripts.hpp  PedModels.hpp  ScriptNames.hpp
src/game/hooks/: Hooks.hpp
src/game/pointers/: Pointers.hpp
src/types/script/: ScriptEvent.hpp
src/types/script/globals/: FreemodeGeneral.hpp  GPBD_FM_3.hpp  MPSV.hpp
src/types/script/locals/: Locals.cpp
